src/objects/loan__Investor_Payments__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Describes the lookup relationship with Account table</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Investors_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Payment_Transaction__c</fullName>
        <description>Describes the master-detail relationship with Loan Payment Transaction table</description>
        <label>Investor Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipName>Investors_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <label>Investor Payments (Deprecated)</label>
    <nameField>
        <displayFormat>IPID-{0000000000}</displayFormat>
        <label>Investor Payments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investors Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>